# PathPlanningLab

./: CMakeLists.txt  LICENSE  README.md
include/core/discretization_methods/: occupancy_grid.hpp
include/ui/: algorithm_selector_dialog.hpp  graphics_scene.hpp  main_window.hpp
include/ui/algorithms_settings/: algorithm_settings_dialog.hpp  astar_settings_dialog.hpp  dijkstra_settings_dialog.hpp  mappings.hpp  types.hpp
include/ui/resources/: algorithm_selector_dialog.h  algorithm_selector_dialog.ui  algorithm_settings_dialog.h  algorithm_settings_dialog.ui  ui_main_window.h  ui_main_window.ui
include/utils/geometry/: common_types.hpp  poly.hpp  smart_multi_polygon.hpp  smart_polygon.hpp
include/utils/visuals/: colors.hpp  polygon_design.hpp
src/core/discretization_methods/: occupancy_grid.cpp
src/ui/: algorithm_selector_dialog.cpp  graphics_scene.cpp  main.cpp  main_window.cpp
src/ui/algorithms_settings/: algorithm_settings_dialog.cpp  astar_settings_dialog.cpp  dijkstra_settings_dialog.cpp
src/utils/geometry/: smart_multi_polygon.cpp  smart_polygon.cpp
src/utils/visuals/: polygon_design.cpp
